[package]
name = "sipl"
version = "0.0.2"
authors = ["PinkP4nther <pinkp4nther@protonmail.com>"]
edition = "2018"
description = "Sutekh Information Pwn Library (SIPL). Is a Rust library for gathering information about the system and user space applications."

[dependencies.rusqlite]
version = "0.24.2"
features = ["bundled"]

[target.'cfg(windows)'.dependencies.winapi]
version = "0.3.9"
features = ["dpapi", "winbase", "wincrypt"]

[dependencies.hex]
version = "0.4.2"

[dependencies.serde_json]
version = "1.0.61"

[dependencies.platform-dirs]
version = "0.3.0"

[dependencies.base64]
version = "0.13.0"

[dependencies.hex-slice]
version = "0.1.4"

[dependencies.aes-gcm]
version = "0.8.0"